# i-am-the-strongest

./: README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
i_am_the_strongest/: i_am_the_strongest_stack.py
strongest_function/: index.py
tests/unit/: test_i_am_the_strongest_stack.py
