[tool.poetry]
name = "i-am-the-strongest"
version = "0.1.0"
description = ""
authors = ["tokiukaze <hare@tokiukaze.com>"]
readme = "README.md"
packages = [{include = "i_am_the_strongest"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "^2.47.0"
aws-lambda-powertools = "^1.31.1"
boto3 = "^1.24.96"
isort = "^5.10.1"
aws-sam-cli = "^1.60.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true